--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "dotenv": "^16.4.2",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
